tests/ui/span/multiline-span-simple.stderr
error[E0277]: cannot add `()` to `u32`
  --> $DIR/multiline-span-simple.rs:13:18
   |
LL |     foo(1 as u32 +
   |                  ^ no implementation for `u32 + ()`
   |
   = help: the trait `Add<()>` is not implemented for `u32`
help: the following other types implement trait `Add<Rhs>`
  --> $SRC_DIR/core/src/ops/arith.rs:LL:COL
   |
   = note: `u32` implements `Add`
  ::: $SRC_DIR/core/src/ops/arith.rs:LL:COL
   |
   = note: in this macro invocation
  --> $SRC_DIR/core/src/internal_macros.rs:LL:COL
   |
   = note: `&u32` implements `Add<u32>`
  ::: $SRC_DIR/core/src/internal_macros.rs:LL:COL
   |
   = note: `u32` implements `Add<&u32>`
  ::: $SRC_DIR/core/src/internal_macros.rs:LL:COL
   |
   = note: `&u32` implements `Add`
   = note: this error originates in the macro `add_impl` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
